# dmr-bridge-discord

./: .env.example  .gitignore  Cargo.toml
src/: commands.rs  main.rs  packet.rs
src/commands/: receiver.rs  transmitter.rs
