[package]
name = "dmr-bridge-discord"
version = "0.1.2"
authors = ["Alexandre MONIER <alexandre.monierc@gmail.com>", "Jessy SOBREIRO <jessy.sobreiro@gmail.com>"]
keywords = ["dmr", "analog-bridge", "usrp", "discord"]
edition = "2018"
license = "GPL-3.0-only"
readme = "README.md"
description = "Bridge a DMR network with a Discord voice channel"
repository = "https://github.com/jess-sys/dmr-bridge-discord.git"
homepage = "https://github.com/jess-sys/dmr-bridge-discord"
documentation = "https://github.com/jess-sys/dmr-bridge-discord/README.md"
categories = ["command-line-utilities", "multimedia::audio", "network-programming"]

[dependencies]
rodio = "=0.19.0"
songbird = "=0.3.2"
serenity = { version = "=0.11.7", features = [ "voice" ]}
tokio = { version = "=1.38.0", features = ["full"] }
chrono = "=0.4.38"
dotenv = "=0.15.0"
byteorder = "=1.5.0"
futures = "0.3.30"
