[package]
name = "dmr-bridge-discord"
version = "0.1.2"
authors = ["Alexandre MONIER <alexandre.monierc@gmail.com>", "Jessy SOBREIRO <jessy.sobreiro@gmail.com>"]
keywords = ["dmr", "analog-bridge", "usrp", "discord"]
edition = "2018"
license = "GPL-3.0-only"
readme = "README.md"
description = "Bridge a DMR network with a Discord voice channel"
repository = "https://github.com/jess-sys/dmr-bridge-discord.git"
homepage = "https://github.com/jess-sys/dmr-bridge-discord"
documentation = "https://github.com/jess-sys/dmr-bridge-discord/README.md"
categories = ["command-line-utilities", "multimedia::audio", "network-programming"]

[dependencies]
rodio = "=0.19.0"
ringbuf = "=0.4.1"
songbird = { version = "=0.4.3", features = ["builtin-queue", "receive"] }
serenity = { version = "=0.12.2", features = [ "voice" ]}
symphonia = { version = "=0.5.4", features = ["pcm"]}
tokio = { version = "=1.39.3", features = ["macros", "rt-multi-thread"] }
poise = { version = "=0.6.1" }
chrono = "=0.4.38"
dotenv = "=0.15.0"
byteorder = "=1.5.0"
futures = "0.3.30"
env_logger = "0.11.5"
